zetasql/compliance/testdata/analytic_percent_rank.test
[load_proto_files=zetasql/testdata/test_schema.proto]
[load_enum_names=zetasql_test__.TestEnum]
[prepare_database]
CREATE TABLE TestTable AS
SELECT cast(1 as int64) as row_id,
       cast(null as bool) as bool_val,
       cast(null as int64) as int64_val,
       cast(null as int32) as int32_val,
       cast(null as string) as str_val UNION ALL
  SELECT 2,  true,  null, null,  null  UNION ALL
  SELECT 3,  false, 1,    1,     "A"   UNION ALL
  SELECT 4,  true,  1,    2,     "A"   UNION ALL
  SELECT 5,  false, 1,    3,     "aA"   UNION ALL
  SELECT 6,  true,  2,    2,     "Aa"   UNION ALL
  SELECT 7,  false, 1,    1,     'a'   UNION ALL
  SELECT 8,  true,  2,    1,     "a"   UNION ALL
  SELECT 9,  false, 2,    3,     "b"   UNION ALL
  SELECT 10, true,  2,    1,     "B"
--
ARRAY<STRUCT<row_id INT64,
             bool_val BOOL,
             int64_val INT64,
             int32_val INT32,
             str_val STRING>>
[
  {1, NULL, NULL, NULL, NULL},
  {2, true, NULL, NULL, NULL},
  {3, false, 1, 1, "A"},
  {4, true, 1, 2, "A"},
  {5, false, 1, 3, "aA"},
  {6, true, 2, 2, "Aa"},
  {7, false, 1, 1, "a"},
  {8, true, 2, 1, "a"},
  {9, false, 2, 3, "b"},
  {10, true, 2, 1, "B"}
]
==

[prepare_database]
CREATE TABLE TableDateTimeBytes AS
SELECT cast(1 as int64) as row_id,
       cast(null as date) as date_val,
       cast(null as timestamp) as timestamp_val,
       cast(null as bytes) as bytes_val UNION ALL
SELECT 2,
       cast('2014-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("1" as bytes) UNION ALL
SELECT 3,
       cast('2014-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("2" as bytes) UNION ALL
SELECT 4,
       cast('2015-01-01' as date),
       TIMESTAMP '2014-01-01 00:00:01.011011 UTC',
       cast("1" as bytes) UNION ALL
SELECT 5,
       cast('2015-01-01' as date),
       TIMESTAMP '2013-01-01 00:00:01.011011 UTC',
       cast("2" as bytes) UNION ALL
SELECT 6,
       cast('2014-01-01' as date),
       TIMESTAMP '2015-01-01 00:00:01.011011 UTC',
       cast("5" as bytes)
--
ARRAY<STRUCT<
        row_id INT64,
        date_val DATE,
        timestamp_val TIMESTAMP,
        bytes_val BYTES
      >>
[{1, NULL, NULL, NULL},
 {
   2,
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   b"1"
 },
 {
   3,
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   b"2"
 },
 {
   4,
   2015-01-01,
   2014-01-01 00:00:01.011011+00,
   b"1"
 },
 {
   5,
   2015-01-01,
   2013-01-01 00:00:01.011011+00,
   b"2"
 },
 {
   6,
   2014-01-01,
   2015-01-01 00:00:01.011011+00,
   b"5"
 }]
==

[default required_features=ANALYTIC_FUNCTIONS]
[name=percent_rank_empty]
SELECT x, PERCENT_RANK() OVER (ORDER BY x) FROM (SELECT 1 x) WHERE x < 0
--
ARRAY<STRUCT<x INT64, DOUBLE>>[]
==

[name=percent_rank_one_row]
SELECT int64_val, PERCENT_RANK() OVER (ORDER BY int64_val)
FROM (SELECT 100 int64_val) as TestTable
--
ARRAY<STRUCT<int64_val INT64, DOUBLE>>[{100, 0}]
==

[name=percent_rank_int64]
SELECT bool_val, int64_val,
       PERCENT_RANK() OVER (PARTITION BY bool_val ORDER BY int64_val)
FROM TestTable
--
ARRAY<STRUCT<bool_val BOOL, int64_val INT64, DOUBLE>>[
  {NULL, NULL, 0},
  {false, 1, 0},
  {false, 1, 0},
  {false, 1, 0},
  {false, 2, 1},
  {true, NULL, 0},
  {true, 1, 0.25},
  {true, 2, 0.5},
  {true, 2, 0.5},
  {true, 2, 0.5}
]
==

[name=percent_rank_bool]
SELECT bool_val, PERCENT_RANK() OVER (ORDER BY bool_val)
FROM TestTable
--
ARRAY<STRUCT<bool_val BOOL, DOUBLE>>[
  {NULL, 0},
  {false, 0.1111111111111111},
  {false, 0.1111111111111111},
  {false, 0.1111111111111111},
  {false, 0.1111111111111111},
  {true, 0.55555555555555558},
  {true, 0.55555555555555558},
  {true, 0.55555555555555558},
  {true, 0.55555555555555558},
  {true, 0.55555555555555558}
]
==

[name=percent_rank_str_int64]
SELECT str_val, int64_val,
       PERCENT_RANK() OVER (ORDER BY str_val, int64_val DESC)
FROM TestTable
--
ARRAY<STRUCT<str_val STRING, int64_val INT64, DOUBLE>>[
  {NULL, NULL, 0},
  {NULL, NULL, 0},
  {"A", 1, 0.22222222222222221},
  {"A", 1, 0.22222222222222221},
  {"Aa", 2, 0.44444444444444442},
  {"B", 2, 0.55555555555555558},
  {"a", 2, 0.66666666666666663},
  {"a", 1, 0.77777777777777779},
  {"aA", 1, 0.88888888888888884},
  {"b", 2, 1}
]
==

[test_features1=V_1_1_ORDER_BY_COLLATE]
[name=percent_rank_collate]
SELECT str_val, int64_val,
       PERCENT_RANK() OVER (ORDER BY str_val COLLATE "en_US", int64_val DESC)
FROM TestTable
ORDER BY str_val COLLATE "en_US"
--
WITH FEATURES: ANALYTIC_FUNCTIONS,V_1_1_ORDER_BY_COLLATE
ARRAY<STRUCT<str_val STRING, int64_val INT64, DOUBLE>>[
  {NULL, NULL, 0},
  {NULL, NULL, 0},
  {"a", 1, 0.33333333333333331},
  {"a", 2, 0.22222222222222221},
  {"A", 1, 0.44444444444444442},
  {"A", 1, 0.44444444444444442},
  {"aA", 1, 0.66666666666666663},
  {"Aa", 2, 0.77777777777777779},
  {"b", 2, 0.88888888888888884},
  {"B", 2, 1}
]
--
WITH FEATURES: ANALYTIC_FUNCTIONS
ERROR: generic::invalid_argument: COLLATE is not supported [at 2:46]
       PERCENT_RANK() OVER (ORDER BY str_val COLLATE "en_US", int64_val DESC)
                                             ^
==

[name=percent_rank_int32_uint64]
SELECT int32_val, cast(int64_val as uint64),
       PERCENT_RANK() OVER (ORDER BY int32_val, cast(int64_val as uint64) ASC)
FROM TestTable
--
ARRAY<STRUCT<int32_val INT32, UINT64, DOUBLE>>[
  {NULL, NULL, 0},
  {NULL, NULL, 0},
  {1, 1, 0.22222222222222221},
  {1, 1, 0.22222222222222221},
  {1, 2, 0.44444444444444442},
  {1, 2, 0.44444444444444442},
  {2, 1, 0.66666666666666663},
  {2, 2, 0.77777777777777779},
  {3, 1, 0.88888888888888884},
  {3, 2, 1}
]
==

[name=percent_rank_uint32_int64]
SELECT cast(int32_val as uint32), int64_val,
       PERCENT_RANK() OVER (ORDER BY cast(int32_val as uint32), int64_val)
FROM TestTable
--
ARRAY<STRUCT<UINT32, int64_val INT64, DOUBLE>>[
  {NULL, NULL, 0},
  {NULL, NULL, 0},
  {1, 1, 0.22222222222222221},
  {1, 1, 0.22222222222222221},
  {1, 2, 0.44444444444444442},
  {1, 2, 0.44444444444444442},
  {2, 1, 0.66666666666666663},
  {2, 2, 0.77777777777777779},
  {3, 1, 0.88888888888888884},
  {3, 2, 1}
]
==

[name=percent_rank_enum]
SELECT enum_val, PERCENT_RANK() OVER (ORDER BY enum_val DESC)
FROM (Select CAST(0 AS `zetasql_test__.TestEnum`) enum_val
      UNION ALL
      SELECT CAST(1 AS `zetasql_test__.TestEnum`)
      UNION ALL
      SELECT CAST(1 AS `zetasql_test__.TestEnum`)
      UNION ALL
      SELECT CAST(2 AS `zetasql_test__.TestEnum`)
      UNION ALL
      SELECT CAST(2 AS `zetasql_test__.TestEnum`)
      UNION ALL
      SELECT CAST(null AS `zetasql_test__.TestEnum`)
      UNION ALL
      SELECT CAST(null AS `zetasql_test__.TestEnum`))
--
ARRAY<STRUCT<
        enum_val ENUM<zetasql_test__.TestEnum>,
        DOUBLE
      >>
[
  {TESTENUM2, 0},
  {TESTENUM2, 0},
  {TESTENUM1, 0.33333333333333331},
  {TESTENUM1, 0.33333333333333331},
  {TESTENUM0, 0.66666666666666663},
  {NULL, 0.83333333333333337},
  {NULL, 0.83333333333333337}
]
==

[name=percent_rank_double]
SELECT double_val, PERCENT_RANK() OVER (ORDER BY double_val)
FROM (SELECT CAST(0 AS DOUBLE) as double_val
      UNION ALL
      SELECT CAST(1 AS DOUBLE)
      UNION ALL
      SELECT CAST(null AS DOUBLE)
      UNION ALL
      SELECT CAST(null AS DOUBLE)
      UNION ALL
      SELECT CAST("NaN" AS DOUBLE)
      UNION ALL
      SELECT CAST("inf" AS DOUBLE)
      UNION ALL
      SELECT CAST("inf" AS DOUBLE)
      UNION ALL
      SELECT CAST("NaN" AS DOUBLE)
      UNION ALL
      SELECT CAST("-inf" AS DOUBLE)
      UNION ALL
      SELECT CAST("-inf" AS DOUBLE))
--
ARRAY<STRUCT<double_val DOUBLE, DOUBLE>>[
  {NULL, 0},
  {NULL, 0},
  {nan, 0.22222222222222221},
  {nan, 0.22222222222222221},
  {-inf, 0.44444444444444442},
  {-inf, 0.44444444444444442},
  {0, 0.66666666666666663},
  {1, 0.77777777777777779},
  {inf, 0.88888888888888884},
  {inf, 0.88888888888888884}
]
==

[name=percent_rank_float]
SELECT float_val, PERCENT_RANK() OVER (ORDER BY float_val)
FROM (SELECT CAST(0 AS FLOAT) as float_val
      UNION ALL
      SELECT CAST(1 AS FLOAT)
      UNION ALL
      SELECT CAST(null AS FLOAT)
      UNION ALL
      SELECT CAST(null AS FLOAT)
      UNION ALL
      SELECT CAST("NaN" AS FLOAT)
      UNION ALL
      SELECT CAST("inf" AS FLOAT)
      UNION ALL
      SELECT CAST("inf" AS FLOAT)
      UNION ALL
      SELECT CAST("NaN" AS FLOAT)
      UNION ALL
      SELECT CAST("-inf" AS FLOAT)
      UNION ALL
      SELECT CAST("-inf" AS FLOAT))
--
ARRAY<STRUCT<float_val FLOAT, DOUBLE>>[
  {NULL, 0},
  {NULL, 0},
  {nan, 0.22222222222222221},
  {nan, 0.22222222222222221},
  {-inf, 0.44444444444444442},
  {-inf, 0.44444444444444442},
  {0, 0.66666666666666663},
  {1, 0.77777777777777779},
  {inf, 0.88888888888888884},
  {inf, 0.88888888888888884}
]
==

[required_features=ANALYTIC_FUNCTIONS,NUMERIC_TYPE]
[name=analytic_percent_rank_numeric]
[parameters="99999999999999999999999999999.999999999" as max_val,
            "-99999999999999999999999999999.999999999" as min_val]
SELECT numeric_val, PERCENT_RANK() OVER (ORDER BY numeric_val)
FROM (SELECT CAST(NULL as NUMERIC) numeric_val UNION ALL
      SELECT 0                         UNION ALL
      SELECT 3.5                       UNION ALL
      SELECT -1.230000001              UNION ALL
      SELECT CAST(@max_val AS NUMERIC) UNION ALL
      SELECT CAST(@min_val AS NUMERIC))
--
ARRAY<STRUCT<numeric_val NUMERIC, DOUBLE>>[
  {NULL, 0},
  {
    -99999999999999999999999999999.999999999,
    0.2
  },
  {-1.230000001, 0.4},
  {0, 0.6},
  {3.5, 0.8},
  {
    99999999999999999999999999999.999999999,
    1
  }
]
==

[name=percent_rank_date_timestamp]
SELECT date_val, timestamp_val,
       PERCENT_RANK() OVER (ORDER BY date_val, timestamp_val)
FROM TableDateTimeBytes
--
ARRAY<STRUCT<
        date_val DATE,
        timestamp_val TIMESTAMP,
        DOUBLE
      >>
[{NULL, NULL, 0},
 {
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   0.2
 },
 {
   2014-01-01,
   2014-01-01 00:00:01.011011+00,
   0.2
 },
 {
   2014-01-01,
   2015-01-01 00:00:01.011011+00,
   0.6
 },
 {
   2015-01-01,
   2013-01-01 00:00:01.011011+00,
   0.8
 },
 {
   2015-01-01,
   2014-01-01 00:00:01.011011+00,
   1
 }]
==

[name=percent_rank_bytes]
SELECT bytes_val,
       PERCENT_RANK() OVER (ORDER BY bytes_val)
FROM TableDateTimeBytes
--
ARRAY<STRUCT<bytes_val BYTES, DOUBLE>>[
  {NULL, 0},
  {b"1", 0.2},
  {b"1", 0.2},
  {b"2", 0.6},
  {b"2", 0.6},
  {b"5", 1}
]
==

[name=percent_rank_no_orderby]
SELECT PERCENT_RANK() OVER ()
FROM TestTable
--
ERROR: generic::invalid_argument: Window ORDER BY is required for analytic function percent_rank [at 1:28]
SELECT PERCENT_RANK() OVER ()
                           ^
==

[name=percent_rank_window]
SELECT row_id, PERCENT_RANK() OVER (ORDER BY bool_val ROWS 2 PRECEDING)
FROM TestTable
--
ERROR: generic::invalid_argument: Window framing clause is not allowed for analytic function percent_rank [at 1:55]
SELECT row_id, PERCENT_RANK() OVER (ORDER BY bool_val ROWS 2 PRECEDING)
                                                      ^
